test/fails/bad_functions/return_type8.lgl
tag a is vec2;

vec2 f(a x) {
    return x; // No topcasting in return
}

void main() {
    return;
}